added zeptojs instead of jquery
http://zeptojs.com/ , minified it‘s small and it‘s more modular

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "vue": "~v0.10.6",
     "requirejs": "~2.1.15",
-    "requirejs-text": "~2.0.12"
+    "requirejs-text": "~2.0.12",
+    "zeptojs": "v1.1.4"
   },
   "devDependencies": {}
 }
