added first build implementation
 + some improvements

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ server/userdata/
 app/styles/main.css
 server/musicplayer_system_info/
 /.project
+server/musicplayer_system_info/currently_playing_track.txt
