--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-minify-css": "~0.3.11",
     "gulp-autoprefixer": "~1.0.1",
     "gulp-rimraf": "~0.1.1",
-    "gulp-exec": "~1.0.3"
+    "gulp-exec": "~1.0.3",
+    "run-sequence": "~1.0.2"
   },
   "engines": {
     "node": ">=0.8.0"
