--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-autoprefixer": "~1.0.1",
     "gulp-rimraf": "~0.1.1",
     "gulp-exec": "~1.0.3",
-    "run-sequence": "~1.0.2"
+    "run-sequence": "~1.0.2",
+    "requirejs": "~2.1.15"
   },
   "engines": {
     "node": ">=0.8.0"
