--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-rimraf": "~0.1.1",
     "gulp-exec": "~1.0.3",
     "run-sequence": "~1.0.2",
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "gulp-uglify": "~1.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
