--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-exec": "~1.0.3",
     "run-sequence": "~1.0.2",
     "requirejs": "~2.1.15",
-    "gulp-uglify": "~1.0.1"
+    "gulp-uglify": "~1.0.1",
+    "gulp-replace": "~0.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
