some style changes

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ app/styles/main.css
 server/musicplayer_system_info/
 /.project
 server/musicplayer_system_info/currently_playing_track.txt
+
+dist/app/styles/main.css
