installer package update

--- a/installer/hostapd.conf
+++ b/installer/hostapd.conf
@@ -47,7 +47,7 @@ driver=nl80211
 #  4 = warning
 #
 logger_syslog=-1
-logger_syslog_level=2
+logger_syslog_level=4
 logger_stdout=-1
 logger_stdout_level=2
 
@@ -80,7 +80,7 @@ ctrl_interface_group=0
 ##### IEEE 802.11 related configuration #######################################
 
 # SSID to be used in IEEE 802.11 management frames
-ssid=musicMagnet
+ssid=MusicMagnet-2
 # Alternative formats for configuring SSID
 # (double quoted string, hexdump, printf-escaped string)
 #ssid2="test"
@@ -93,14 +93,14 @@ ssid=musicMagnet
 # Country code (ISO/IEC 3166-1). Used to set regulatory domain.
 # Set as needed to indicate country in which device is operating.
 # This can limit available channels and transmit power.
-#country_code=DE
+country_code=DE
 
 # Enable IEEE 802.11d. This advertises the country_code and the set of allowed
 # channels and transmit power levels based on the regulatory limits. The
 # country_code setting must be configured with the correct country for
 # IEEE 802.11d functions.
 # (default: 0 = disabled)
-#ieee80211d=1
+ieee80211d=1
 
 # Enable IEEE 802.11h. This enables radar detection and DFS support if
 # available. DFS support is required on outdoor 5 GHz channels in most countries
@@ -176,12 +176,12 @@ fragm_threshold=2346
 # default: use the most common supported rate setting for the selected
 # hw_mode (i.e., this line can be removed from configuration file in most
 # cases)
-#supported_rates=10 20 55 110 60 90 120 180 240 360 480 540
+supported_rates=110 240
 
 # Basic rate set configuration
 # List of rates (in 100 kbps) that are included in the basic rate set.
 # If this item is not included, usually reasonable default set is used.
-#basic_rates=10 20
+basic_rates=110 240
 #basic_rates=10 20 55 110
 #basic_rates=60 120 240
 
@@ -194,7 +194,7 @@ fragm_threshold=2346
 # disabled (and enabled when such STAs disassociate) dynamically.
 # 0 = do not allow use of short preamble (default)
 # 1 = allow use of short preamble
-#preamble=1
+preamble=1
 
 # Station MAC address -based authentication
 # Please note that this kind of access control requires a driver that uses
@@ -307,11 +307,11 @@ ignore_broadcast_ssid=0
 # note - here cwMin and cmMax are in exponent form. the actual cw value used
 # will be (2^n)-1 where n is the value given here
 #
-wmm_enabled=0
+wmm_enabled=1
 #
 # WMM-PS Unscheduled Automatic Power Save Delivery [U-APSD]
 # Enable this flag if U-APSD supported outside hostapd (eg., Firmware/driver)
-#uapsd_advertisement_enabled=1
+uapsd_advertisement_enabled=1
 #
 # Low priority / AC_BK = background
 wmm_ac_bk_cwmin=4
@@ -378,7 +378,7 @@ wmm_ac_vo_acm=0
 # disassociation frame is not sent immediately without first polling
 # the STA with a data frame.
 # default: 300 (i.e., 5 minutes)
-#ap_max_inactivity=300
+ap_max_inactivity=600
 #
 # The inactivity polling can be disabled to disconnect stations based on
 # inactivity timeout so that idle stations are more likely to be disconnected
@@ -399,7 +399,7 @@ wmm_ac_vo_acm=0
 # (only supported with driver=nl80211)
 # This mode allows associated stations to use 4-address frames to allow layer 2
 # bridging to be used.
-#wds_sta=1
+wds_sta=1
 
 # If bridge parameter is set, the WDS STA interface will be added to the same
 # bridge by default. This can be overridden with the wds_bridge parameter to
@@ -997,7 +997,7 @@ wpa=2
 # wpa_psk (dot11RSNAConfigPSKValue)
 # wpa_passphrase (dot11RSNAConfigPSKPassPhrase)
 #wpa_psk=
-wpa_passphrase=musicMagnet
+wpa_passphrase=MusicMagnet
 
 # Optionally, WPA PSKs can be read from a separate text file (containing list
 # of (PSK,MAC address) pairs. This allows more than one PSK to be configured.
