--- a/installer/dnsmasq.conf
+++ b/installer/dnsmasq.conf
@@ -141,7 +141,7 @@ interface=wlan0
 # 2) Sets the "domain" DHCP option thereby potentially setting the
 #    domain of all systems configured by DHCP
 # 3) Provides the domain part for "expand-hosts"
-domain=musikbaum.de
+domain=musicmag.net
 
 # Set a different domain for a particular subnet
 #domain=wireless.thekelleys.org.uk,192.168.2.0/24
