--- a/installer/mm-background.service
+++ b/installer/mm-background.service
@@ -6,7 +6,9 @@ After=local-fs.target network.target multi-user.target
 Type=simple
 User=musicmagnet
 Group=musicmagnet
+Nice=19
 ExecStart=/home/musicmagnet/daemons/background.sh
+StandardOutput=null
 
 [Install]
 WantedBy=multi-user.target
